fix html in email templates and hide span with overflowing copyright info on maps

--- a/trunk/epic/core/media/css/epic.css
+++ b/trunk/epic/core/media/css/epic.css
@@ -1271,3 +1271,7 @@ ul.errorlist li {
 .add_more_link {
 	font-size: 77%;
 }
+
+#map div span {
+    visibility: hidden;
+}
